force-app/main/default/objects/PMC_SS_AllocationSummary__c/PMC_SS_AllocationSummary__c.object-meta.xml
<CustomObject>
    <label>Allocation Summary</label>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Allocation Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>