force-app/main/default/objects/PMC_SS_AllocationSummary__c/fields/PMC_SS_AllocationFrequency__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AllocationFrequency__c</fullName>
    <label>Allocation Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>