force-app/main/default/objects/PMC_SS_AllocationSummary__c/fields/PMC_SS_ProductLocationAllocationKey__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ProductLocationAllocationKey__c</fullName>
    <description>Specifies the Product Location Allocation Period Key</description>
    <externalId>true</externalId>
    <label>Product Location Allocation Period Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>