force-app/main/default/objects/PMC_SS_AllocationSummary__c/fields/PMC_SS_TotalAllocationQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_TotalAllocationQuantity__c</fullName>
    <description>Specifies the Total Allocation Quantity</description>
    <label>Total Allocation Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>