force-app/main/default/objects/PMC_SS_AllocationSummary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PMC_SS_Product__c</columns>
    <columns>PMC_SS_Location__c</columns>
    <columns>PMC_SS_AllocationPeriod__c</columns>
    <columns>PMC_SS_TotalAllocationQuantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>